# Financial_Document_Analyzer

./: .gitignore  README.md  app.py  chunk_analysis.ipynb  dataset_explore.ipynb  demo.py  docker-compose.yml  main.py  pip.txt  pyproject.toml
cli/: batch_eval.py  batch_ingest.py  export_eval_html.py  ingest1_elements.py  ingest2_5_metadata.py  ingest2_chunking.py  ingest3_embed.py  ingest3_metadata.py  ingest4_embed.py  ingest4_vectorstore.py  ingest5_vectorstore.py  vectorestore_cli.py  vectorstore_cli.py
configs/: config_loader.py  default.yaml
data/logs/: v1.html  v1.jsonl  v2.1.1.html  v2.1.1.jsonl  v4_rrf1.html  v4_rrf1.jsonl  v4_rrf2.html  v4_rrf2.jsonl
graph/: node.py  state.py
ingest/: embedder.py  index.py  loader.py  splitter.py
models/: llm.py
notebooks/: chunk_analysis.ipynb  dataset_explore.ipynb  financebench_analysis.ipynb
pages/: 1_Ingest.py
scripts/: run_financebench_eval.py  step0_1_elements_refactor.py  step1_elements.py  step2_chunking.py  step2_chunks.py  step3_1_embed.py  step3_2_weaviate.py  step3_embed.py  step3_embed_store.py  step4_vectordb.py  step5_query.py  step6_retrieve.py  step7_generate.py  step_1to4_pipeline.py  test_run.py
src/adapters/: ollama.py  pdf_io.py
src/graph/: app.py  schemas.py  state.py
src/ingestion/: chunking.py  elements.py  embeddings.py  metadata.py  vectorstore.py
src/models/: ollama.py
src/prompts/: eval_prompt.yaml  metadata_prompt.yaml  qa_prompt.yaml  qa_prompt_diet.yaml  qa_prompt_v1.yaml  qa_prompt_v2.yaml  rerank_prompt.yaml
src/services/: evaluate.py  ingest.py
src/utils/: config.py  (+4 more)
test/: test.py  test_eval.py  test_ingest.py  test_run.py
(+32 files in other folders)
