[project]
name = "financial-document-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.1",
    "lxml>=6.0.2",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pdfminer-six>=20250506",
    "pi-heif>=1.1.1",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
    "unstructured>=0.18.15",
    "unstructured-inference>=0.2.4",
]
